feat: checkpoint 8 completado autorización y roles con jwt